--- a/portfolio.html
+++ b/portfolio.html
@@ -31,20 +31,20 @@
                         </li>
                     </ul>
                 </nav>
-                <div>
-                    <ul class="menu list">
-                        <li>
-                            <a class="contact-mail menu-link link" href="mailto:info@devstudio.com"><svg class="contact-mail-icon">
+                <ul class="menu list">
+                    <li>
+                        <a class="contact-mail menu-link link" href="mailto:info@devstudio.com"><svg aria-label="email"
+                                class="contact-mail-icon" width="16" height="12">
                                 <use href="./images/icons.svg#icon-envelope"></use>
                             </svg>info@devstudio.com</a>
-                        </li>
-                        <li>
-                            <a class="contact-number menu-link link" href="tel+380961111111"><svg class="contact-number-icon">
+                    </li>
+                    <li>
+                        <a class="contact-number menu-link link" href="tel+380961111111"><svg aria-label="phone-number"
+                                class="contact-number-icon" width="10" height="12">
                                 <use href="./images/icons.svg#icon-smartphone"></use>
                             </svg>+38 096 111 11 11</a>
-                        </li>
-                    </ul>
-                </div>
+                    </li>
+                </ul>
             </div>
         </header>
         <!--Main-->
@@ -140,9 +140,10 @@
         </main>
         <!--footer-->
     <footer class="page-footer">
-        <div class="container page-footer-container">
-            <a class="link-logo" href="./index.html"><span class="logo-web-footer">Web</span><span
-                    class="logo-studio-footer">Studio</span></a>
+        <div class="footer-icons">
+            <div class="container page-footer-container">
+                <a class="link-logo" href="./index.html"><span class="logo-web-footer webstudio">Web</span><span
+                        class="logo-studio-footer webstudio">Studio</span></a>
                 <!--адресса-->
                 <address>
                     <ul class="contact-panel">
@@ -156,6 +157,40 @@
                     </ul>
                 </address>
             </div>
-        </footer>
+            <div class="contact-links">
+                <h2 class="join-us">ПРИЄДНУЙТЕСЬ</h2>
+                <ul class="icons-list list">
+                    <li class="icons-list-item">
+                        <a href="#" class="icons-list-link">
+                            <svg aria-label="іконка інстаграму" class="icons-list-icon">
+                                <use href="./images/icons.svg#icon-instagram"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="icons-list-item">
+                        <a href="#" class="icons-list-link">
+                            <svg aria-label="іконка твітеру" class="icons-list-icon">
+                                <use href="./images/icons.svg#icon-twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="icons-list-item">
+                        <a href="#" class="icons-list-link">
+                            <svg aria-label="іконка фейсбук" class="icons-list-icon">
+                                <use href="./images/icons.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="icons-list-item">
+                        <a href="#" class="icons-list-link">
+                            <svg aria-label="іконка лінкідін" class="icons-list-icon">
+                                <use href="./images/icons.svg#icon-linkedin"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </footer>
     </body>
 </html>
