--- a/index.html
+++ b/index.html
@@ -72,7 +72,6 @@
             <h2 class="section-title">УВАГА ДО ДЕТАЛЕЙ</h2>
             <p class="paragraph">Ідейні міркування, і навіть початок повсякденної роботи з формування
                 позиції.</p>
-        </div>
     </li>
     <li>
         <div class="feature">
@@ -122,7 +121,7 @@
             <div class="container">
                 <h3 class="section-title-item">Наша команда</h3>
                 <ul class="menu list workers-list">
-                    <li>
+                    <li class="employees-box">
                             <img src="./images/img.jpg" alt="Ігор Дем'яненко" width="270">
                             <div class="employees-content-wrapper">
                                 <h4 class="main-title">Ігор Дем'яненко</h4>
@@ -159,7 +158,7 @@
                                 </ul>
                             </div>
                     </li>
-                    <li>
+                    <li class="employees-box">
                             <img src="./images/img-2.jpg" alt="Ольга Рєпіна" width="270">
                             <div class="employees-content-wrapper">
                                 <h4 class="main-title">Ольга Рєпіна</h4>
@@ -196,35 +195,35 @@
                                 </ul>
                             </div>
                     </li>
-                    <li >
+                    <li class="employees-box">
                             <img src="./images/img-3.jpg" alt="Микола Тарасов" width="270">
                             <div class="employees-content-wrapper">
                                 <h4 class="main-title">Микола Тарасов</h4>
                                 <p class="paragraph-title">Marketing</p>
                                 <ul class="social-list list">
                                     <li class="social-list-item">
-                                        <a href="" class="social-list-link">
+                                        <a href="#" class="social-list-link">
                                             <svg aria-label="іконка інстаграму" class="social-list-icon">
                                                 <use href="./images/icons.svg#icon-instagram"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="social-list-item">
-                                        <a href="" class="social-list-link">
+                                        <a href="#" class="social-list-link">
                                             <svg aria-label="іконка твітеру" class="social-list-icon">
                                                 <use href="./images/icons.svg#icon-twitter"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="social-list-item">
-                                        <a href="" class="social-list-link">
+                                        <a href="#" class="social-list-link">
                                             <svg aria-label="іконка фейсбук" class="social-list-icon">
                                                 <use href="./images/icons.svg#icon-facebook"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="social-list-item">
-                                        <a href="" class="social-list-link">
+                                        <a href="#" class="social-list-link">
                                             <svg aria-label="іконка лінкідін" class="social-list-icon">
                                                 <use href="./images/icons.svg#icon-linkedin"></use>
                                             </svg>
@@ -233,7 +232,7 @@
                                 </ul>
                             </div>
                     </li>
-                    <li>
+                    <li class="employees-box">
                             <img src="./images/img-4.jpg" alt="Михайло Єрмаков" width="270">
                             <div class="employees-content-wrapper">
                                 <h4 class="main-title">Михайло Єрмаков</h4>
@@ -273,24 +272,104 @@
                 </ul>
             </div>
         </section>
+        <section class="section clients">
+            <div class="container">
+                <h4 class="section-title-item">Постійні клієнти</h4>
+                <ul class="menu list clients-list">
+                    <li class="clients-box">
+                        <a href="#" class="clients-link">
+                            <svg class="clients-icon"><use href="./images/icons.svg#icon-Logo"></use></svg>
+                        </a>
+                    </li>
+                    <li class="clients-box">
+                        <a href="#" class="clients-link">
+                            <svg class="clients-icon">
+                                <use href="./images/icons.svg#icon-Logo-2"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="clients-box">
+                        <a href="#" class="clients-link">
+                            <svg class="clients-icon">
+                                <use href="./images/icons.svg#icon-Logo-3"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="clients-box">
+                        <a href="#" class="clients-link">
+                            <svg class="clients-icon">
+                                <use href="./images/icons.svg#icon-Logo-4"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="clients-box">
+                        <a href="#" class="clients-link">
+                            <svg class="clients-icon">
+                                <use href="./images/icons.svg#icon-Logo-5"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="clients-box"><a href="#" class="clients-link">
+                        <svg class="clients-icon">
+                            <use href="./images/icons.svg#icon-Logo-6"></use>
+                        </svg>
+                    </a></li>
+                </ul>
+            </div>
+        </section>
     </main>
     <!--footer-->
     <footer class="page-footer">
-        <div class="container page-footer-container">
+        <div class="footer-icons">
+            <div class=" page-footer-container">
                 <a class="link-logo" href="./index.html"><span class="logo-web-footer webstudio">Web</span><span
                         class="logo-studio-footer webstudio">Studio</span></a>
-            <!--адресса-->
-            <address>
-                <ul class="contact-panel">
-                    <li><a class="contact-nav"
-                            href="https://www.google.com/maps/dir//Lesi+Ukrainky+Blvd,+26,+Kyiv,+Ukraine,+02000/@50.4265947,30.5380962,19.89z/data=!4m9!4m8!1m0!1m5!1m1!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!2m2!1d30.5383858!2d50.4265807!3e0">м.
-                            Київ, пр-т Лесі Українки, 26</a></li>
-                    <li><a class="contact-mail-footer" href="mailto:info@example.com">info@example.com</a>
+                <!--адресса-->
+                <address>
+                    <ul class="contact-panel">
+                        <li><a class="contact-nav"
+                                href="https://www.google.com/maps/dir//Lesi+Ukrainky+Blvd,+26,+Kyiv,+Ukraine,+02000/@50.4265947,30.5380962,19.89z/data=!4m9!4m8!1m0!1m5!1m1!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!2m2!1d30.5383858!2d50.4265807!3e0">м.
+                                Київ, пр-т Лесі Українки, 26</a></li>
+                        <li><a class="contact-mail-footer" href="mailto:info@example.com">info@example.com</a>
+                        </li>
+                        <li><a class="contact-number-footer" href="tel:+380991111111">+38 099
+                                111 11 11</a></li>
+                    </ul>
+                </address>
+            </div>
+            <div class="contact-links">
+                <h2 class="join-us">ПРИЄДНУЙТЕСЬ</h2>
+                <ul class="icons-list list">
+                    <li class="icons-list-item">
+                        <a href="#" class="icons-list-link">
+                            <svg aria-label="іконка інстаграму" class="icons-list-icon">
+                                <use href="./images/icons.svg#icon-instagram"></use>
+                            </svg>
+                        </a>
                     </li>
-                    <li><a class="contact-number-footer" href="tel:+380991111111">+38 099
-                            111 11 11</a></li>
+                    <li class="icons-list-item">
+                        <a href="#" class="icons-list-link">
+                            <svg aria-label="іконка твітеру" class="icons-list-icon">
+                                <use href="./images/icons.svg#icon-twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="icons-list-item">
+                        <a href="#" class="icons-list-link">
+                            <svg aria-label="іконка фейсбук" class="icons-list-icon">
+                                <use href="./images/icons.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="icons-list-item">
+                        <a href="#" class="icons-list-link">
+                            <svg aria-label="іконка лінкідін" class="icons-list-icon">
+                                <use href="./images/icons.svg#icon-linkedin"></use>
+                            </svg>
+                        </a>
+                    </li>
                 </ul>
-            </address>
+            </div>
         </div>
     </footer>
 </body>
