--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <main>
         <!--Замовити послугу-->
         <section class="hero">
-            <div class="container-hero">
+            <div class="container-hero container">
         <h1 class="hero-title">
             Ефективні рішення для вашого бізнесу
         </h1>
@@ -60,7 +60,7 @@
             </div>
         </section>
         <!--Особливості-->
-        <section class="section container">
+        <section class="section">
             <div class="container">
 <ul class="menu list">
     <li>
@@ -338,7 +338,7 @@
                 </address>
             </div>
             <div class="contact-links">
-                <h2 class="join-us">ПРИЄДНУЙТЕСЬ</h2>
+                <p class="join-us">ПРИЄДНУЙТЕСЬ</p>
                 <ul class="icons-list list">
                     <li class="icons-list-item">
                         <a href="#" class="icons-list-link">
