--- a/portfolio.html
+++ b/portfolio.html
@@ -72,67 +72,85 @@
                             <!--Projects-->
                             <ul class="menu list projects">
                                 <li class="menu-item-card">
-                                    <img class="group" src="./images/project-1.jpg" alt="Project1" width="370">
-                                    <div class="project-text">
-                                        <h2 class="section-title-portfolio">Технокряк</h2>
-                                        <p class="paragraph-portfolio">Веб-сайт</p>
-                                    </div>
+                                    <a href="#" class="item-card">
+                                        <img class="group" src="./images/project-1.jpg" alt="Project1" width="370">
+                                        <div class="project-text">
+                                            <h2 class="section-title-portfolio">Технокряк</h2>
+                                            <p class="paragraph-portfolio">Веб-сайт</p>
+                                        </div>
+                                    </a>
                                 </li>
                                 <li class="menu-item-card">
-                                    <img class="group" src="./images/project-2.jpg" alt="Project2" width="370">
-                                    <div class="project-text">
-                                        <h2 class="section-title-portfolio">Постер New Orlean vs Golden Star</h2>
-                                        <p class="paragraph-portfolio">Дизайн</p>
-                                    </div>
+                                    <a href="#" class="item-card">
+                                        <img class="group" src="./images/project-2.jpg" alt="Project2" width="370">
+                                        <div class="project-text">
+                                            <h2 class="section-title-portfolio">Постер New Orlean vs Golden Star</h2>
+                                            <p class="paragraph-portfolio">Дизайн</p>
+                                        </div>
+                                    </a>
                                 </li>
                                 <li class="menu-item-card">
-                                    <img class="group" src="./images/project-3.jpg" alt="Project3" width="370">
-                                    <div class="project-text">
-                                        <h2 class="section-title-portfolio">Ресторан Seafood</h2>
-                                        <p class="paragraph-portfolio">Додаток</p>
-                                    </div>
+                                    <a href="#" class="item-card">
+                                        <img class="group" src="./images/project-3.jpg" alt="Project3" width="370">
+                                        <div class="project-text">
+                                            <h2 class="section-title-portfolio">Ресторан Seafood</h2>
+                                            <p class="paragraph-portfolio">Додаток</p>
+                                        </div>
+                                    </a>
                                 </li>
                                 <li class="menu-item-card">
-                                    <img class="group" src="./images/project-4.jpg" alt="Project4" width="370">
-                                    <div class="project-text">
-                                        <h2 class="section-title-portfolio">Проєкт Prime</h2>
-                                        <p class="paragraph-portfolio">Маркетинг</p>
-                                    </div>
+                                    <a href="#" class="item-card">
+                                        <img class="group" src="./images/project-4.jpg" alt="Project4" width="370">
+                                        <div class="project-text">
+                                            <h2 class="section-title-portfolio">Проєкт Prime</h2>
+                                            <p class="paragraph-portfolio">Маркетинг</p>
+                                        </div>
+                                    </a>
                                 </li>
                                 <li class="menu-item-card">
-                                    <img class="group" src="./images/project-5.jpg" alt="Project5" width="370">
-                                    <div class="project-text">
-                                        <h2 class="section-title-portfolio">Проєкт Boxes</h2>
-                                        <p class="paragraph-portfolio">Додаток</p>
-                                    </div>
+                                    <a href="#" class="item-card">
+                                        <img class="group" src="./images/project-5.jpg" alt="Project5" width="370">
+                                        <div class="project-text">
+                                            <h2 class="section-title-portfolio">Проєкт Boxes</h2>
+                                            <p class="paragraph-portfolio">Додаток</p>
+                                        </div>
+                                    </a>
                                 </li>
                                 <li class="menu-item-card">
-                                    <img class="group" src="./images/project-6.jpg" alt="Project6" width="370">
-                                    <div class="project-text">
-                                        <h2 class="section-title-portfolio">Inspiration has no Borders</h2>
-                                        <p class="paragraph-portfolio">Веб-сайт</p>
-                                    </div>
+                                    <a href="#" class="item-card">
+                                        <img class="group" src="./images/project-6.jpg" alt="Project6" width="370">
+                                        <div class="project-text">
+                                            <h2 class="section-title-portfolio">Inspiration has no Borders</h2>
+                                            <p class="paragraph-portfolio">Веб-сайт</p>
+                                        </div>
+                                    </a>
                                 </li>
                                 <li class="menu-item-card">
-                                    <img class="group" src="./images/project-7.jpg" alt="Project7" width="370">
-                                    <div class="project-text">
-                                        <h2 class="section-title-portfolio">Видання Limited Edition</h2>
-                                        <p class="paragraph-portfolio">Дизайн</p>
-                                    </div>
+                                    <a href="#" class="item-card">
+                                        <img class="group" src="./images/project-7.jpg" alt="Project7" width="370">
+                                        <div class="project-text">
+                                            <h2 class="section-title-portfolio">Видання Limited Edition</h2>
+                                            <p class="paragraph-portfolio">Дизайн</p>
+                                        </div>
+                                    </a>
                                 </li>
                                 <li class="menu-item-card">
-                                    <img class="group" src="./images/project-8.jpg" alt="Project8" width="370">
-                                    <div class="project-text">
-                                        <h2 class="section-title-portfolio">Проєкт LAB</h2>
-                                        <p class="paragraph-portfolio">Маркетинг</p>
-                                    </div>
+                                    <a href="#" class="item-card">
+                                        <img class="group" src="./images/project-8.jpg" alt="Project8" width="370">
+                                        <div class="project-text">
+                                            <h2 class="section-title-portfolio">Проєкт LAB</h2>
+                                            <p class="paragraph-portfolio">Маркетинг</p>
+                                        </div>
+                                    </a>
                                 </li>
                                 <li class="menu-item-card">
-                                    <img class="group" src="./images/project-9.jpg" alt="Project9" width="370">
-                                    <div class="project-text">
-                                        <h2 class="section-title-portfolio">Growing Business</h2>
-                                        <p class="paragraph-portfolio">Додаток</p>
-                                    </div>
+                                    <a href="#" class="item-card">
+                                        <img class="group" src="./images/project-9.jpg" alt="Project9" width="370">
+                                        <div class="project-text">
+                                            <h2 class="section-title-portfolio">Growing Business</h2>
+                                            <p class="paragraph-portfolio">Додаток</p>
+                                        </div>
+                                    </a>
                                 </li>
                             </ul>
                     </div>
@@ -141,7 +159,7 @@
         <!--footer-->
     <footer class="page-footer">
         <div class="footer-icons">
-            <div class="container page-footer-container">
+            <div class=" page-footer-container">
                 <a class="link-logo" href="./index.html"><span class="logo-web-footer webstudio">Web</span><span
                         class="logo-studio-footer webstudio">Studio</span></a>
                 <!--адресса-->
@@ -158,7 +176,7 @@
                 </address>
             </div>
             <div class="contact-links">
-                <h2 class="join-us">ПРИЄДНУЙТЕСЬ</h2>
+                <p class="join-us">ПРИЄДНУЙТЕСЬ</p>
                 <ul class="icons-list list">
                     <li class="icons-list-item">
                         <a href="#" class="icons-list-link">
