--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <main>
         <!--Замовити послугу-->
         <section class="hero">
-            <div class="container-hero container">
+            <div class="container">
         <h1 class="hero-title">
             Ефективні рішення для вашого бізнесу
         </h1>
@@ -320,7 +320,7 @@
     </main>
     <!--footer-->
     <footer class="page-footer">
-        <div class="footer-icons">
+        <div class="footer-icons container">
             <div class=" page-footer-container">
                 <a class="link-logo" href="./index.html"><span class="logo-web-footer webstudio">Web</span><span
                         class="logo-studio-footer webstudio">Studio</span></a>
